--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-image = "0.25.2"
+image = "0.23.14"
 clap = { version = "4.5.19", features = ["derive"] }
 clap_derive = "4.5.18"
 chrono = "0.4.38"
 sha2 = "0.10.8"
+image-diff = "0.1.13"
